// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts config file fix 1`] = `
"{
  \\"name\\": \\"John\\",
  \\"files\\": [
    \\"src/main.ts\\"
  ],
  \\"include\\": [
    \\"src\\"
  ],
  \\"compilerOptions\\": {
    \\"allowUnreachableCode\\": false,
    \\"allowUnusedLabels\\": false,
    \\"checkJs\\": true,
    \\"esModuleInterop\\": true,
    \\"exactOptionalPropertyTypes\\": true,
    \\"forceConsistentCasingInFileNames\\": true,
    \\"noFallthroughCasesInSwitch\\": true,
    \\"noImplicitAny\\": true,
    \\"noImplicitOverride\\": true,
    \\"noImplicitReturns\\": true,
    \\"noPropertyAccessFromIndexSignature\\": false,
    \\"noUncheckedIndexedAccess\\": true,
    \\"noUnusedLocals\\": true,
    \\"noUnusedParameters\\": true,
    \\"skipLibCheck\\": true,
    \\"strict\\": true,
    \\"outDir\\": \\"./dist\\",
    \\"moduleResolution\\": \\"Node\\",
    \\"target\\": \\"ES2020\\",
    \\"lib\\": [
      \\"ESNext\\"
    ]
  }
}"
`;

exports[`ts config file fix 2`] = `
{
  "canFix": true,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "{
  \\"name\\": \\"John\\",
  \\"files\\": [
    \\"src/main.ts\\"
  ],
  \\"include\\": [
    \\"src\\"
  ],
  \\"compilerOptions\\": {
    \\"allowUnreachableCode\\": false,
    \\"allowUnusedLabels\\": false,
    \\"checkJs\\": true,
    \\"esModuleInterop\\": true,
    \\"exactOptionalPropertyTypes\\": true,
    \\"forceConsistentCasingInFileNames\\": true,
    \\"noFallthroughCasesInSwitch\\": true,
    \\"noImplicitAny\\": true,
    \\"noImplicitOverride\\": true,
    \\"noImplicitReturns\\": true,
    \\"noPropertyAccessFromIndexSignature\\": false,
    \\"noUncheckedIndexedAccess\\": true,
    \\"noUnusedLocals\\": true,
    \\"noUnusedParameters\\": true,
    \\"skipLibCheck\\": true,
    \\"strict\\": true,
    \\"outDir\\": \\"./dist\\",
    \\"moduleResolution\\": \\"Node\\",
    \\"target\\": \\"ES2020\\",
    \\"lib\\": [
      \\"ESNext\\"
    ]
  }
}",
  "fileContentObject": {
    "compilerOptions": {
      "allowUnreachableCode": false,
      "allowUnusedLabels": false,
      "checkJs": true,
      "esModuleInterop": true,
      "exactOptionalPropertyTypes": true,
      "forceConsistentCasingInFileNames": true,
      "lib": [
        "ESNext",
      ],
      "moduleResolution": "Node",
      "noFallthroughCasesInSwitch": true,
      "noImplicitAny": true,
      "noImplicitOverride": true,
      "noImplicitReturns": true,
      "noPropertyAccessFromIndexSignature": false,
      "noUncheckedIndexedAccess": true,
      "noUnusedLocals": true,
      "noUnusedParameters": true,
      "outDir": "./dist",
      "skipLibCheck": true,
      "strict": true,
      "target": "ES2020",
    },
    "files": [
      "src/main.ts",
    ],
    "include": [
      "src",
    ],
    "name": "John",
  },
  "fileName": "",
  "originalFileContent": "",
  "passed": [
    "does-not-use-wildcard-in-files-section",
    "my-folder-is-not-needed-in-include-section-my-folder-is-enough",
  ],
  "warnings": [
    "could-have-a-non-empty-types-compiler-option-ex-types-node-fs-promises",
  ],
}
`;

exports[`ts config file no check 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": false,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "",
  "fileName": "",
  "originalFileContent": "",
  "passed": [],
  "warnings": [],
}
`;

exports[`ts config malformed 1`] = `
{
  "canFix": false,
  "canForce": false,
  "data": {
    "canAutoMergeDeps": true,
    "hasMainBranch": false,
    "hasTaskPrefix": false,
    "isModule": false,
    "isPublishedPackage": false,
    "isQuiet": false,
    "isUsingC8": false,
    "isUsingDependencyCruiser": false,
    "isUsingEslint": false,
    "isUsingNyc": false,
    "isUsingShuutils": false,
    "isUsingTailwind": false,
    "isUsingTypescript": true,
    "isUsingVue": false,
    "isWebPublished": false,
    "license": "GPL-3.0",
    "maxSizeKo": 1,
    "packageName": "",
    "repoId": "a-great-repo",
    "shouldAvoidSass": true,
    "userId": "Shuunen",
    "userIdLowercase": "shuunen",
    "userMail": "romain.racamier@gmail.com",
    "userName": "Romain Racamier-Lafon",
    "webUrl": "https://my-website.com",
    "willGenerateReport": true,
  },
  "failed": [],
  "fileContent": "\\"name\\": \\"John\\" }",
  "fileName": "",
  "originalFileContent": "",
  "passed": [],
  "warnings": [],
}
`;
